# The-Git-Commits

./: .gitignore  Dockerfile  README.md  flake.nix  fly.toml  manage.py  pyproject.toml  requirements.txt  startup.sh
PeerVue/: asgi.py  settings.py  urls.py  wsgi.py
assessments/: admin.py  feedback.py  models.py  tests.py  urls.py  views.py
assessments/migrations/: 0001_initial.py  0002_copy_old_assessments.py  0003_alter_assessmentquestion_question_type_and_more.py  0004_alter_assessmentquestion_question_type_and_more.py  0005_alter_assessmentquestion_question_type.py  0005_assessment_allow_self_assessment.py  0006_merge_20250414_1700.py  0007_remove_assessment_published_assessment_publish_date.py  0008_assessment_due_soon_email_sent_and_more.py  0009_assessment_responses_published.py
assessments/templates/: assessment_creation.html  new_student_assessment.html  review_feedback.html  student_assessment.html  student_assessment_list.html  view_feedback.html
assessments/templates/assessments/: assessment_creation.html  professor_assessment_list.html  professor_feedback_assessments.html  professor_feedback_courses.html  professor_feedback_final.html  professor_feedback_individual.html  professor_feedback_teams.html  student_assessment.html  student_assessment_list.html  student_feedback_final.html
emailing/: apps.py  emailing.py  models.py
emailing/migrations/: 0001_initial.py
emailing/templates/: due_soon_email.html  invite_email.html  publish_email.html
landing/: admin.py  courses.py  models.py  urls.py  views.py
landing/migrations/: 0001_initial.py  0002_course_semester.py  0003_alter_team_options.py  0004_assessment_assessmentquestion.py  0005_assessment_course_assessment_published.py  0006_alter_assessmentquestion_required.py  0007_alter_assessment_due_date.py  0008_remove_assessmentquestion_assessment_and_more.py
oauth/: admin.py  models.py  oauth.py  urls.py  views.py
oauth/migrations/: 0001_initial.py  0002_alter_user_options_user_last_login_user_password_and_more.py  0003_remove_user_id_alter_user_email.py  0004_remove_user_course_alter_user_options_delete_course.py  0005_adminemailaddress.py  0006_alter_adminemailaddress_email.py  0007_alter_user_role.py  0007_course_remove_user_last_login_remove_user_password_and_more.py  0008_alter_user_role.py  0008_remove_team_course_alter_user_course_alter_user_team_and_more.py  0009_merge_20250330_1628.py  0010_remove_user_course_remove_user_team_user_courses_and_more.py  0011_alter_user_managers_user_date_joined_user_first_name_and_more.py
oauth/templates/: login.html  user_registration.html
peervue/: asgi.py  settings.py  urls.py  wsgi.py
prototypes/course_team_edit/: index.css  index.html
src/peervue/: settings.py  urls.py
staticfiles/css/: base.css  navbar.css
templates/: base.html
(+26 files in other folders)
